<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <fragment
        android:id="@+id/uMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:uiRotateGestures="true"
        app:uiZoomControls="true" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/pave_uBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/temp_uBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uMap"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pave_uText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pave"
        app:layout_constraintBottom_toTopOf="@+id/pave_uBar"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/temp_uBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/overall_uBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pave_uBar" />

    <TextView
        android:id="@+id/temp_uText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/temp"
        app:layout_constraintBottom_toTopOf="@+id/temp_uBar"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/air_uBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/noise_uBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uMap" />

    <TextView
        android:id="@+id/air_uText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/air"
        app:layout_constraintBottom_toTopOf="@+id/air_uBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/noise_uBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="140dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/overall_uBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/air_uBar" />

    <TextView
        android:id="@+id/noise_uText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/noise"
        app:layout_constraintBottom_toTopOf="@+id/noise_uBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/overall_uBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noise_uBar" />

    <TextView
        android:id="@+id/overall_uText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/overall"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/overall_uBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/linkInfo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/linkInfo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linkPave_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uMap"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/linkPave_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/linkPave"
        app:layout_constraintBottom_toTopOf="@+id/linkTemp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/uMap"
        app:layout_constraintTop_toBottomOf="@+id/linkInfo_text" />

    <TextView
        android:id="@+id/linkTemp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/linkTemp"
        app:layout_constraintBottom_toTopOf="@+id/linkAir_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/uMap"
        app:layout_constraintTop_toBottomOf="@+id/linkPave_text" />

    <TextView
        android:id="@+id/linkAir_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/linkAir"
        app:layout_constraintBottom_toTopOf="@+id/linkNoise_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/uMap"
        app:layout_constraintTop_toBottomOf="@+id/linkTemp_text" />

    <TextView
        android:id="@+id/linkNoise_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/linkNoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/uMap"
        app:layout_constraintTop_toBottomOf="@+id/linkAir_text" />

</androidx.constraintlayout.widget.ConstraintLayout>